--- a/osx_environment.yml
+++ b/osx_environment.yml
@@ -20,9 +20,15 @@ dependencies:
   - xz=5.2.5=haf1e3a3_1
   - zlib=1.2.11=h7795811_1010
   - pip:
+    - affine==2.3.0
+    - attrs==20.3.0
     - cachetools==4.2.0
     - cffi==1.14.4
     - chardet==4.0.0
+    - click==7.1.2
+    - click-plugins==1.1.1
+    - cligj==0.7.1
+    - cycler==0.10.0
     - earthengine-api==0.1.246
     - future==0.18.2
     - google-api-core==1.24.1
@@ -37,18 +43,26 @@ dependencies:
     - httplib2==0.18.1
     - httplib2shim==0.0.3
     - idna==2.10
+    - kiwisolver==1.3.1
+    - matplotlib==3.3.3
     - numpy==1.19.4
     - pandas==1.1.5
+    - pillow==8.1.0
     - protobuf==3.14.0
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
     - pycparser==2.20
+    - pyparsing==2.4.7
     - pyproj==3.0.0.post1
     - python-dateutil==2.8.1
     - pytz==2020.5
+    - rasterio==1.1.8
     - requests==2.25.1
     - rsa==4.6
     - shapely==1.7.1
     - six==1.15.0
+    - snuggs==1.4.7
     - uritemplate==3.0.1
     - urllib3==1.26.2
+prefix: /Users/Patrick/miniconda/envs/landsat-city
+
