--- a/osx_environment.yml
+++ b/osx_environment.yml
@@ -3,112 +3,102 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - attrs=20.3.0=pyhd3deb0d_0
-  - boost-cpp=1.74.0=h43a636a_2
-  - bzip2=1.0.8=hc929b4f_4
-  - c-ares=1.17.1=hc929b4f_0
-  - ca-certificates=2020.12.5=h033912b_0
-  - cairo=1.16.0=h4ec454a_1007
-  - certifi=2020.12.5=py36h79c6626_1
-  - cfitsio=3.470=h01dc385_7
-  - click=7.1.2=pyh9f0ad1d_0
-  - click-plugins=1.1.1=py_0
-  - cligj=0.7.1=pyhd8ed1ab_0
-  - curl=7.71.1=hcb81553_8
-  - expat=2.2.10=h1c7c35f_0
-  - fiona=1.8.18=py36h1be08e4_0
-  - fontconfig=2.13.1=hd23ceaa_1004
-  - freetype=2.10.4=h4cff582_1
-  - freexl=1.0.5=h0b31af3_1002
-  - gdal=3.1.4=py36h4daf707_2
-  - geopandas=0.8.2=pyhd8ed1ab_0
-  - geos=3.8.1=h4a8c4bd_0
-  - geotiff=1.6.0=hc1004f4_3
-  - gettext=0.19.8.1=h7937167_1005
-  - giflib=5.2.1=hbcb3906_2
-  - hdf4=4.2.13=h71d84a9_1004
-  - hdf5=1.10.6=nompi_hc5d9132_1114
-  - icu=68.1=h74dc148_0
-  - jpeg=9d=hbcb3906_0
-  - json-c=0.13.1=h575e443_1002
-  - kealib=1.4.14=h82515a5_0
-  - krb5=1.17.2=h60d9502_0
-  - libblas=3.9.0=7_openblas
-  - libcblas=3.9.0=7_openblas
-  - libcurl=7.71.1=h9bf37e3_8
-  - libcxx=11.0.1=habf9029_0
-  - libdap4=3.20.6=h993cace_1
-  - libedit=3.1.20191231=h0678c8f_2
-  - libev=4.33=haf1e3a3_1
-  - libffi=3.3=h046ec9c_2
-  - libgdal=3.1.4=hbb49e5d_2
-  - libgfortran=5.0.0=9_3_0_h6c81a4c_17
-  - libgfortran5=9.3.0=h6c81a4c_17
-  - libglib=2.66.4=h7424822_2
-  - libiconv=1.16=haf1e3a3_0
-  - libkml=1.3.0=h8ca2c65_1012
-  - liblapack=3.9.0=7_openblas
-  - libnetcdf=4.7.4=nompi_h9d8a93f_107
-  - libnghttp2=1.41.0=h7580e61_2
-  - libopenblas=0.3.12=openmp_h54245bb_1
-  - libpng=1.6.37=h7cec526_2
-  - libpq=12.3=h7049927_3
-  - libspatialindex=1.9.3=h4a8c4bd_3
-  - libspatialite=5.0.0=h1d49f08_0
-  - libssh2=1.9.0=h8a08a2b_5
-  - libtiff=4.2.0=h355d032_0
-  - libwebp-base=1.1.0=hbcb3906_3
-  - libxml2=2.9.10=h802ca4f_3
-  - llvm-openmp=11.0.1=h7c73e74_0
-  - lz4-c=1.9.3=h046ec9c_0
-  - munch=2.5.0=py_0
-  - ncurses=6.2=h2e338ed_4
-  - numpy=1.19.5=py36h08dc641_1
-  - openjpeg=2.4.0=h6cbf5cd_0
-  - openssl=1.1.1i=h35c211d_0
-  - pandas=1.1.5=py36h2be6da3_0
-  - pcre=8.44=hb1e8313_0
-  - pip=21.0=pyhd8ed1ab_1
-  - pixman=0.40.0=hbcb3906_0
-  - poppler=0.89.0=hd735947_5
-  - poppler-data=0.4.10=0
-  - postgresql=12.3=he852019_3
-  - proj=7.1.1=h45baca5_3
-  - pyproj=2.6.1.post1=py36hd092de6_3
-  - python=3.6.12=h6c3b2c9_0_cpython
-  - python-dateutil=2.8.1=py_0
-  - python_abi=3.6=1_cp36m
-  - pytz=2020.5=pyhd8ed1ab_0
-  - readline=8.0=h0678c8f_2
-  - rtree=0.9.7=py36h49c2f37_1
-  - scipy=1.5.3=py36h04de62b_0
-  - setuptools=49.6.0=py36h79c6626_3
-  - shapely=1.7.1=py36h9a6d1a1_1
-  - six=1.15.0=pyh9f0ad1d_0
-  - sqlite=3.34.0=h17101e1_0
-  - tiledb=2.1.6=h6a9efa5_1
-  - tk=8.6.10=h0419947_1
-  - tzcode=2021a=h35c211d_0
-  - wheel=0.36.2=pyhd3deb0d_0
-  - xerces-c=3.2.3=hd3a8c1e_2
-  - xz=5.2.5=haf1e3a3_1
-  - zlib=1.2.11=h7795811_1010
-  - zstd=1.4.8=hf387650_1
+  - attrs=20.3.0
+  - boost-cpp=1.74.0
+  - bzip2=1.0.8
+  - c-ares=1.17.1
+  - ca-certificates
+  - cairo=1.16.0
+  - certifi=2020.12.5
+  - cfitsio=3.470
+  - click=7.1.2
+  - click-plugins=1.1.1
+  - cligj=0.7.1
+  - curl=7.71.1
+  - expat=2.2.10
+  - fiona=1.8.18
+  - fontconfig=2.13.1
+  - freetype=2.10.4
+  - freexl=1.0.5
+  - gdal=3.1.4
+  - geopandas=0.8.2
+  - geos=3.8.1
+  - geotiff=1.6.0
+  - gettext=0.19.8.1
+  - giflib=5.2.1
+  - hdf4=4.2.13
+  - hdf5=1.10.6
+  - icu=68.1
+  - jpeg=9d
+  - json-c=0.13.1
+  - kealib=1.4.14
+  - krb5=1.17.2
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libcurl=7.71.1
+  - libcxx=11.0.1
+  - libdap4=3.20.6
+  - libedit=3.1.20191231
+  - libev=4.33
+  - libffi=3.3
+  - libgdal=3.1.4
+  - libgfortran=5.0.0
+  - libgfortran5=9.3.0
+  - libglib=2.66.4
+  - libiconv=1.16
+  - libkml=1.3.0
+  - liblapack=3.9.0
+  - libnetcdf=4.7.4
+  - libnghttp2=1.41.0
+  - libopenblas=0.3.12
+  - libpng=1.6.37
+  - libpq=12.3
+  - libspatialindex=1.9.3
+  - libspatialite=5.0.0
+  - libssh2=1.9.0
+  - libtiff=4.2.0
+  - libwebp-base=1.1.0
+  - libxml2=2.9.10
+  - llvm-openmp=11.0.1
+  - lz4-c=1.9.3
+  - munch=2.5.0
+  - ncurses=6.2
+  - numpy=1.19.5
+  - openjpeg=2.4.0
+  - openssl=1.1.1i
+  - pandas=1.1.5
+  - pcre=8.44
+  - pip=21.0
+  - pixman=0.40.0
+  - poppler=0.89.0
+  - poppler-data=0.4.10
+  - postgresql=12.3
+  - proj=7.1.1
+  - pyproj=2.6.1.post1
+  - python=3.6.12
+  - python-dateutil=2.8.1
+  - python_abi=3.6
+  - pytz=2020.5
+  - readline=8.0
+  - rtree=0.9.7
+  - scipy=1.5.3
+  - setuptools=49.6.0
+  - shapely=1.7.1
+  - six=1.15.0
+  - sqlite=3.34.0
+  - tiledb=2.1.6
+  - tk=8.6.10
+  - tzcode
+  - wheel=0.36.2
+  - xerces-c=3.2.3
+  - xz=5.2.5
+  - zlib=1.2.11
+  - zstd=1.4.8
   - pip:
     - cachetools==4.2.1
     - cffi==1.14.4
     - chardet==4.0.0
-    - earthengine-api==0.1.249
     - future==0.18.2
-    - google-api-core==1.25.1
-    - google-api-python-client==1.12.8
-    - google-auth==1.24.0
-    - google-auth-httplib2==0.0.4
-    - google-cloud-core==1.5.0
-    - google-cloud-storage==1.35.0
-    - google-crc32c==1.1.2
-    - google-resumable-media==1.2.0
-    - googleapis-common-protos==1.52.0
     - httplib2==0.18.1
     - httplib2shim==0.0.3
     - idna==2.10
